--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.en.resx
@@ -124,7 +124,7 @@
     <value>Check your organisation's details</value>
   </data>
   <data name="TradingName" xml:space="preserve">
-    <value>Trading name</value>
+    <value>Name</value>
   </data>
   <data name="UKNation" xml:space="preserve">
     <value>UK Nation</value>
