--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.cy.resx
@@ -117,13 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Declaration.ButtonText" xml:space="preserve">
-    <value>Cadarnhau a chyflwyno</value>
+  <data name="Body" xml:space="preserve">
+    <value>Rhaid ichi ddweud wrth y rheoleiddiwr am y diweddariad ym manylion eich sefydliad. &lt;br/&gt;&lt;br/&gt; I wneud hyn, cyflwynwch ffeil manylion sefydliad newydd. Rhaid ichi wneud hyn o fewn 28 diwrnod ar ôl i'ch sefydliad newid eu manylion. &lt;br/&gt;&lt;br/&gt; Os ydych chi wedi cyflwyno ffeil gyda'r wybodaeth ddiwygiedig yn barod, does dim angen ichi wneud hynny eto.</value>
   </data>
-  <data name="Declaration.Paragraph1" xml:space="preserve">
-    <value>Drwy a chadarnhau'ch manylion, rydych ci'n cytuno bod yr wybodaeth rydych chi wedi'i rhoi yn gyflawn ac yn gywir.</value>
+  <data name="ChangedBy" xml:space="preserve">
+    <value>Wedi'u newid gan {0} am {1}{2} ar {3} {5} {6}.</value>
   </data>
-  <data name="Declaration.Title" xml:space="preserve">
-    <value>Datganiad</value>
+  <data name="Header" xml:space="preserve">
+    <value>Mae manylion eich sefydliad wedi'u diweddaru</value>
+  </data>
+  <data name="ManageAccountLink" xml:space="preserve">
+    <value>Ewch i 'Rheoli'r cyfrif'</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Mae manylion eich sefydliad wedi'u diweddaru</value>
+  </data>
+  <data name="WhatHappensNext" xml:space="preserve">
+    <value>Beth mae'n rhaid ichi ei wneud nesaf</value>
   </data>
 </root>
