--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateDetailsConfirmation.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateDetailsConfirmation.cy.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ConfirmationMessage" xml:space="preserve">
-    <value>[Welsh]Your details have been updated</value>
+    <value>Mae'ch manylion chi wedi'u diweddaru</value>
   </data>
   <data name="ManageAccountLinkDescription" xml:space="preserve">
-    <value>[Welsh]Go to manage account</value>
+    <value>Ewch i 'Rheoli'r cyfrif'</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
     <value>Mae'ch manylion chi wedi'u diweddaru</value>
