--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateDetailsConfirmation.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateDetailsConfirmation.cy.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ChangedBy" xml:space="preserve">
+    <value>Wedi'u newid gan {0} am {1}{2} ar {3} {5} {6}.</value>
+  </data>
   <data name="ConfirmationMessage" xml:space="preserve">
     <value>Mae'ch manylion chi wedi'u diweddaru</value>
   </data>
