--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ChangeCompanyDetails.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ChangeCompanyDetails.en.resx
@@ -151,6 +151,6 @@
     <value>You must tell the regulator about the update to your organisation details. &lt;br/&gt; To do this, submit a new organisation details file.</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Change company details</value>
+    <value>Change organisation details</value>
   </data>
 </root>
