--- a/src/FrontendAccountManagement.Web/Resources/Views/Shared/Error.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/Shared/Error.en.resx
@@ -121,10 +121,10 @@
     <value>Error</value>
   </data>
   <data name="Error.Title" xml:space="preserve">
-    <value>Sorry, there is a problem with the service</value>
+    <value>Something has gone wrong</value>
   </data>
   <data name="Error.TryAgainLater" xml:space="preserve">
-    <value>Something has gone wrong</value>
+    <value>Go back and try again, making sure you've entered your information correctly. If you keep seeing this error, copy the following timestamp and contact the service desk. Give them the timestamp and the details of your issue - for example, what you were trying to do when you saw this error.</value>
   </data>
   <data name="Error.WeHaveNotSaved" xml:space="preserve">
     <value>We have not saved your answers. When the service is available, you will have to start again.</value>
