--- a/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
@@ -162,4 +162,10 @@
   <data name="Footer.LicenceDescription3" xml:space="preserve">
     <value>, oni nodir yn wahanol</value>
   </data>
+  <data name="Footer.AccessibilityAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go to the Accessibility statement</value>
+  </data>
+  <data name="Footer.PrivacyAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go to the Privacy notice</value>
+  </data>
 </root>
