--- a/src/FrontendAccountManagement.Web/Resources/SharedResources.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/SharedResources.en.resx
@@ -198,4 +198,7 @@
   <data name="BusinessPostcodeBackAriaLabel" xml:space="preserve">
     <value>Click on this link if you wish to go back to the Do you want to update your business address page</value>
   </data>
+  <data name="BusinessAddressBackAriaLabel" xml:space="preserve">
+    <value>Click here if you wish to go to the Do you want to update your organisation’s business address page</value>
+  </data>
 </root>
