add user type check

--- a/src/FrontendAccountManagement.Web/Resources/SharedResources.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/SharedResources.cy.resx
@@ -198,4 +198,7 @@
 	<data name="BusinessPostcodeBackAriaLabel" xml:space="preserve">
     <value>Click on this link if you wish to go back to the Do you want to update your business address page</value>
   </data>
+	<data name="CompanyNameBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the Do you want to update your organisation name page</value>
+  </data>
 </root>
