--- a/src/FrontendAccountManagement.Web/Resources/SharedResources.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/SharedResources.en.resx
@@ -201,4 +201,7 @@
 	<data name="CompanyNameBackAriaLabel" xml:space="preserve">
     <value>Click on this link if you wish to go back to the Do you want to update your organisation name page</value>
   </data>
+  <data name="UpdateBusinessAddressBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the Do you want to update your business address page</value>
+  </data>
 </root>
