--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateCompanyAddress.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateCompanyAddress.en.resx
@@ -104,4 +104,7 @@
 	<data name="UpdateCompanyAddress.SelectionError" xml:space="preserve">
 		<value>Select an option</value>
 	</data>
+	<data name="UpdateCompanyAddress.Title" xml:space="preserve">
+		<value>Do you want to update your organisation’s business address?</value>
+	</data>
 </root>
