--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/BusinessAddressPostcode.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/BusinessAddressPostcode.en.resx
@@ -107,4 +107,7 @@
 	<data name="BusinessAddressPostcode.EnterPostcodeError" xml:space="preserve">
 		<value>Enter a postcode, like AA1 1AA</value>
 	</data>
+	<data name="BusinessAddressPostcode.Title" xml:space="preserve">
+		<value>What is your business address?</value>
+	</data>
 </root>
