--- a/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
@@ -163,9 +163,12 @@
     <value>, oni nodir yn wahanol</value>
   </data>
   <data name="Footer.AccessibilityAriaLabel" xml:space="preserve">
-    <value>Click on this link if you wish to go to the Accessibility statement</value>
+    <value>Cliciwch ar y ddolen yma os hoffech chi fynd i'r Datganiad hygyrchedd</value>
   </data>
   <data name="Footer.PrivacyAriaLabel" xml:space="preserve">
-    <value>Click on this link if you wish to go to the Privacy notice</value>
+    <value>Cliciwch ar y ddolen yma os hoffech chi fynd i'r Hysbysiad preifatrwydd</value>
+  </data>
+  <data name="Footer.CookiesAriaLabel" xml:space="preserve">
+    <value>Cliciwch ar y ddolen yma os hoffech chi fynd i'r tudalen Cwcis</value>
   </data>
 </root>
