--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyName.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyName.cy.resx
@@ -118,18 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="CompanyName.Header" xml:space="preserve">
-    <value>What is your organisation Name ?</value>
+    <value>Beth yw enw eich sefydliad chi?</value>
   </data>
   <data name="CompanyName.Hint" xml:space="preserve">
-    <value>You may trade under your own name you have given your business</value>
+    <value>Gallwch fod yn masnachu o dan eich enw chi’ch hun, neu enw rydych chi wedi’i roi i’ch busnes.</value>
   </data>
   <data name="CompanyName.NameErrorMessage" xml:space="preserve">
-    <value>Enter an organisation name</value>
+    <value>Rhowch enw sefydliad</value>
   </data>
   <data name="CompanyName.NameLengthErrorMessage" xml:space="preserve">
-    <value>Organisation name must be 170 characters or less</value>
+    <value>Rhaid i enw'r sefydliad fod yn 170 o gymeriadau neu lai</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Change organisation Name</value>
+    <value>Beth yw enw eich sefydliad chi?</value>
   </data>
 </root>
