# 507254 'What is your telephone number?' screen is not validated correctly for a blank field - FIXED
# 507259 Back button is not working from the 'What is your telephone number?' screen - FIXED

--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccountTelephone.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccountTelephone.cy.resx
@@ -127,6 +127,6 @@
     <value>[Welsh] What is your telephone number?</value>
   </data>
   <data name="TelephoneNumber" xml:space="preserve">
-    <value>[Welsh] Telephone number</value>
+    <value>Rhif ffôn</value>
   </data>
 </root>
