--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/SelectBusinessAddress.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/SelectBusinessAddress.cy.resx
@@ -2,21 +2,21 @@
 
 <root>
 	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-		<xsd:element name="root" msdata:IsDataSet="true">
-		</xsd:element>
-	</xsd:schema>
-	<resheader name="resmimetype">
-		<value>text/microsoft-resx</value>
-	</resheader>
-	<resheader name="version">
-		<value>1.3</value>
-	</resheader>
-	<resheader name="reader">
-		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<resheader name="writer">
-		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
+        <xsd:element name="root" msdata:IsDataSet="true">
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>1.3</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
   <data name="SelectBusinessAddress.ErrorMessage" xml:space="preserve">
     <value>Dewiswch eich cyfeiriad o’r rhestr</value>
   </data>
@@ -26,16 +26,22 @@
   <data name="SelectBusinessAddress.Hint" xml:space="preserve">
     <value>Cod Post</value>
   </data>
-	<data name="SelectBusinessAddress.Title" xml:space="preserve">
-		<value>Dewis cyfeiriad busnes</value>
-	</data>
+  <data name="SelectBusinessAddress.Title" xml:space="preserve">
+    <value>Dewiswch eich cyfeiriad o’r rhestr</value>
+  </data>
   <data name="SelectBusinessAddress.ListLabel" xml:space="preserve">
     <value>Dewiswch gyfeiriad</value>
   </data>
-	<data name="SelectBusinessAddress.AddressNotFoundLink" xml:space="preserve">
+  <data name="SelectBusinessAddress.AddressNotFoundLink" xml:space="preserve">
     <value>Dwi’n methu gweld fy nghyfeiriad i yn y rhestr</value>
   </data>
-	<data name="SelectBusinessAddress.NumberOfAddressesFound" xml:space="preserve">
-		<value>{0} o gyfeiriadau wedi’u canfod</value>
-	</data>
+  <data name="SelectBusinessAddress.NumberOfAddressesFound" xml:space="preserve">
+    <value>{0} o gyfeiriadau wedi’u canfod</value>
+  </data>
+  <data name="SelectBusinessAddress.AddressNotFoundLinkDes" xml:space="preserve">
+    <value>Cliciwch yma os hoffech chi deipio'ch cyfeiriad eich hun</value>
+  </data>
+  <data name="SelectBusinessAddress.Change" xml:space="preserve">
+    <value>Cliciwch yma os hoffech chi newid y cod post</value>
+  </data>
 </root>
