--- a/src/FrontendAccountManagement.Web/Resources/SharedResources.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/SharedResources.cy.resx
@@ -205,6 +205,6 @@
     <value>Cliciwch yma os hoffech chi fynd i'r tudalen Hoffech chi ddiweddaru cyfeiriad busnes eich sefydliad</value>
   </data>
   <data name="UpdateBusinessAddressBackAriaLabel" xml:space="preserve">
-    <value>Click on this link if you wish to go back to the Do you want to update your business address page</value>
+    <value>Cliciwch ar y ddolen yma os hoffech chi fynd yn ôl i'r tudalen Hoffech chi ddiweddaru cyfeiriad eich busnes</value>
   </data>
 </root>
